--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li>Adicionar e documentar o readme.md com a descrição sobre o que se trata este repositório;</li> 
                 <li>Realizar o commit e o push do readme documentado para o repositório remoto.</li> 
             </ul>
-            <p>Concluído ✔️ <a href="../[M1S02] Ex 2/ex02.html">Clique aqui para retornar a ele</a></p>
+            <p>Concluído ✔️ <a href="https://github.com/GeorgeEnriqueBravo/DEVinHouse-Modulo01-Semana02" target="_blank" rel="noopener noreferrer">Clique aqui para retornar a ele</a></p>
         </div>
         <hr>
         <div>
@@ -42,7 +42,7 @@
 
             <p>Realize o commit do exercício resolvido.</p>           
 
-            <p>Concluído ✔️ <a href="../[M1S02] Ex 2/ex02.html">Clique aqui para visualizar</a></p>
+            <p>Concluído ✔️ <a href="[M1S02]Ex02/ex02.html" target="_blank" rel="noopener noreferrer">Clique aqui para visualizar</a></p>
         </div>
         <hr>
         <div>
@@ -61,11 +61,81 @@
             
             <p>Realize o commit do exercício resolvido.</p>
 
-            <p>Concluído ✔️ <a href="../[M1S02] Ex 3/ex03.html">Clique aqui para visualizar</a></p>
+            <p>Concluído ✔️ <a href="[M1S02]Ex03/ex03.html" target="_blank" rel="noopener noreferrer">Clique aqui para visualizar</a></p>
         </div>
         <hr>
         <div>
-
+            <h3>Exercício 04 - Somar números</h3>
+            <p><strong>Descrição:</strong></p>
+            <p>Utilizando estrutura de repetição, some os números digitados através do prompt enquanto o número for diferente de -1, quando digitado -1 pare de exibir o prompt e exiba através de um alert o resultado da soma dos números digitados.</p>
+            <p>Realize o commit do exercício resolvido.</p>
+            <p>Concluído ✔️ <a href="[M1S02]Ex04/ex04.html" target="_blank" rel="noopener noreferrer">Clique aqui para visualizar</a></p>
+        </div>
+        <hr>
+        <div>
+            <h3>Exercício 05 - Pares e Ímpares</h3>
+            <p><strong>Descrição:</strong></p>
+            <p>Exiba um prompt solicitando a entrada de um número para saber quantos pares e impares existem de 0 até o número digitado. <br>
+            Calcule o número de pares e impares e exiba o resultado utilizando um alert.</p>
+            <p>Realize o commit do exercício resolvido.</p>
+            <p>Concluído ✔️ <a href="[M1S02]Ex05/ex05.html" target="_blank" rel="noopener noreferrer">Clique aqui para visualizar</a></p>
+        </div>
+        <hr>
+        <div>
+            <h3>Exercício 06 - Pares e Ímpares</h3>
+            <p><strong>Descrição:</strong></p>
+            <p>Faça 3 prompts ao usuário:</p>
+            <ol>
+                <li>no primeiro, pergunte qual o tipo de cálculo ele deseja fazer (“+”, “-”, “*” ou “/”);</li>
+                <li>no segundo, pergunte o primeiro valor que deseja calcular;</li>
+                <li>no terceiro, o segundo valor que deseja calcular.
+                </li>
+            </ol>
+            <p>Em seguida, realize o cálculo e exiba na tela um “alert” contendo o texto “O resultado do seu cálculo é: X”, onde X é o resultado final do cálculo solicitado pelo usuário.</p>
+            <p>Realize o commit do exercício resolvido.</p>
+            <p>Concluído ✔️ <a href="[M1S02]Ex06/ex06.html" target="_blank" rel="noopener noreferrer">Clique aqui para visualizar</a></p>
+        </div>
+        <hr>
+        <div>
+            <h3>Exercício 07 - Verifique a estação do ano</h3>
+            <p><strong>Descrição:</strong></p>
+            <p>Baseado na data atual, seu código deve verificar qual a estação atual do ano no hemisfério sul, exibindo através de um alert a estação atual.</p>
+            <p>Considere:</p>
+            <p> - 22/12 a 21/03 - Verão; <br>
+                - 22/03 a 21/06 - Outono; <br>
+                - 22/06 a 21/09 - Inverno; <br>
+                - 22/09 a 21/12 - Primavera.
+            </p>
+            <p>Realize o commit do exercício resolvido.</p>
+            <p>Concluído ❌</p>
+            <p>Ainda em construção...</p>
+            <!-- <p>Concluído ✔️ <a href="[M1S02]Ex07/ex07.html" target="_blank" rel="noopener noreferrer">Clique aqui para visualizar</a></p> -->
+        </div>
+        <hr>
+        <div>
+            <h3>Exercício 08 - Número primo</h3>
+            <p><strong>Descrição:</strong></p>
+            <p>Percorra os números de 0 a 1000 e exiba no console os números primos e ao final a quantidade de números primos que existem nesse intervalo.</p>
+            <p>Realize o commit do exercício resolvido.</p>
+            <p>Concluído ✔️ <a href="[M1S02]Ex08/ex08.html" target="_blank" rel="noopener noreferrer">Clique aqui para visualizar</a></p>
+        </div>
+        <hr>
+        <div>
+            <h3>Exercício 09 - Construa uma “calculadora” de P.A</h3>
+            <p><strong>Descrição:</strong></p>
+            <p>Ao entrar na página, seu script deve realizar 2 prompts ao usuário: um solicitando um “valor inicial”, e outro um valor para a “raíz”. Após o usuário inserir esses valores, o seu script deve calcular os 10 primeiros valores da sequência e exibir na tela.</p>
+            <p>Relembrando: P.A. (Progressão Aritmética) é uma sequência numérica em que cada termo, a partir do segundo, é igual à soma do termo anterior com a raiz. Exemplo: Valor inicial = 1; raiz = 3; P.A. = 1, 4, 7, 10, 13, 16, 19, 22, 25, 28.</p>
+            <p>Realize o commit do exercício resolvido.</p>
+            <p>Concluído ✔️ <a href="[M1S02]Ex09/ex09.html" target="_blank" rel="noopener noreferrer">Clique aqui para visualizar</a></p>
+        </div>
+        <hr>
+        <div>
+            <h3>Exercício 10 - Enviar os exercícios para o repositório remoto</h3>
+            <p><strong>Descrição:</strong></p>
+            <p>Após finalizar todos os exercícios e ter feito o commit de cada um após sua resolução é necessário enviar o código para o repositório remoto.</p>
+            <p>Para isso utilizando o comando correto realize o envio.</p>
+            <p>Concluído ✔️</p>
+            <p>Já está salvo no meu repositório remoto.</p>
         </div>
     </section>
 
