--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li>Adicionar e documentar o readme.md com a descrição sobre o que se trata este repositório;</li> 
                 <li>Realizar o commit e o push do readme documentado para o repositório remoto.</li> 
             </ul>
-            <p>Concluído ✔️ <a href="https://github.com/GeorgeEnriqueBravo/DEVinHouse-Modulo01-Semana02" target="_blank" rel="noopener noreferrer">Clique aqui para retornar a ele</a></p>
+            <p>Concluído ✔️ <a href="https://github.com/GeorgeEnriqueBravo/DEVinHouse-Modulo01-Semana02" rel="noopener noreferrer">Clique aqui para retornar a ele</a></p>
         </div>
         <hr>
         <div>
@@ -82,7 +82,7 @@
         </div>
         <hr>
         <div>
-            <h3>Exercício 06 - Pares e Ímpares</h3>
+            <h3>Exercício 06 - Construa uma calculadora</h3>
             <p><strong>Descrição:</strong></p>
             <p>Faça 3 prompts ao usuário:</p>
             <ol>
