--- a/index.html
+++ b/index.html
@@ -107,9 +107,7 @@
                 - 22/09 a 21/12 - Primavera.
             </p>
             <p>Realize o commit do exercício resolvido.</p>
-            <p>Concluído ❌</p>
-            <p>Ainda em construção...</p>
-            <!-- <p>Concluído ✔️ <a href="[M1S02]Ex07/ex07.html" target="_blank" rel="noopener noreferrer">Clique aqui para visualizar</a></p> -->
+            <p>Concluído ✔️ <a href="[M1S02]Ex07/ex07.html" target="_blank" rel="noopener noreferrer">Clique aqui para visualizar</a></p>
         </div>
         <hr>
         <div>
