--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Exercício</title>
     <link rel="stylesheet" href="estilo.css">
-    <link rel="icon" type="image/x-icon" href="images/faviconDev.png">
+    <link rel="icon" type="image/x-icon" href="imagens/faviconDev.png">
 </head>
 
 <body>
